[package]
name = "sensor-tlv493d"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
tags = [ "embedded", "sensor", "i2c", "tlv493d"]
license = "MPLv2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = [ "thiserror" ]
util = [ "linux-embedded-hal", "structopt", "simplelog", "ctrlc" ]
default = [ "std", "util" ]


[dependencies]
log = "0.4.11"
embedded-hal = "0.2.4"

structopt = { version = "*", optional = true }
linux-embedded-hal = { version = "*", optional = true }
simplelog = { version = "0.8.0", optional = true }
thiserror = { version = "1.0.21", optional = true }
ctrlc = { version = "3.1.6", optional = true }
bitflags = "1.2.1"

[[bin]]
name = "tlv493d-util"
path = "src/util.rs"
required-features = [ "util" ]
