[package]
name = "sensor-tlv493d"
description = "Driver for the Infineon tlv493d 3-DoF I2C hall-effect sensor"
repository = "https://github.com/ryankurte/rust-sensor-tlv493d"
keywords = [ "embedded", "no_std", "sensor", "i2c", "tlv493d" ]
authors = ["ryan <ryan@kurte.nz>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2018"


[features]
std = [ "thiserror", "anyhow" ]
util = [ "linux-embedded-hal", "structopt", "simplelog", "ctrlc" ]
default = [ "std", "util" ]


[dependencies]
log = "0.4.11"
embedded-hal = "0.2.4"

structopt = { version = "*", optional = true }
linux-embedded-hal = { version = "*", optional = true }
simplelog = { version = "0.8.0", optional = true }
thiserror = { version = "1.0.21", optional = true }
ctrlc = { version = "3.1.6", optional = true }
bitflags = "1.2.1"
anyhow = { version = "1.0.33", optional = true }

[[bin]]
name = "tlv493d-util"
path = "src/util.rs"
required-features = [ "util" ]
