[package]
name = "sensor-tlv493d"
description = "Driver for the Infineon tlv493d 3-DoF I2C hall-effect sensor"
repository = "https://github.com/ryankurte/rust-sensor-tlv493d"
keywords = [ "embedded", "no_std", "sensor", "i2c", "tlv493d" ]
authors = ["ryan <ryan@kurte.nz>"]
license = "MPL-2.0"
version = "0.1.1-alpha.0"
edition = "2018"


[features]
std = [ "thiserror", "anyhow" ]
math = []
util = [ "linux-embedded-hal", "structopt", "simplelog", "ctrlc", "math" ]
default = [ "std", "util" ]


[dependencies]
log = "0.4.11"
embedded-hal = "1.0.0-alpha.4"
bitflags = "1.2.1"

linux-embedded-hal = { version = "0.4.0-alpha.0", optional = true }
structopt = { version = "0.3.20", optional = true }
simplelog = { version = "0.10.1", optional = true }
thiserror = { version = "1.0.21", optional = true }
ctrlc = { version = "3.1.6", optional = true }
anyhow = { version = "1.0.33", optional = true }

[[bin]]
name = "tlv493d-util"
path = "src/util.rs"
required-features = [ "util" ]
